...
          }}
        />
        <Trigger.Label>{t("tabs.home")}</Trigger.Label>
      </Trigger>
      <Trigger
        name="library"
        unstable_nativeProps={{ tabBarItemTestID: "tab-library" }}
      >
        <Trigger.Icon
          sf={{ default: "books.vertical", selected: "books.vertical.fill" }}
          md="newsstand"
        />
        <Trigger.Label>{t("tabs.library")}</Trigger.Label>
      </Trigger>
      <Trigger
        name="settings"
        unstable_nativeProps={{ tabBarItemTestID: "tab-settings" }}
      >
        <Trigger.Icon
          sf={{ default: "gearshape", selected: "gearshape.fill" }}
          src={{
            default: (
              <Trigger.VectorIcon family={MaterialIcons} name="settings" />
...
